--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src https: 'self' data:; font-src https: 'self' data:;"/>
     <title>Stamp Web 7.0.0</title>
     <link href="https://drake-server.ddns.net" rel="preconnect" crossorigin="">
+    <link rel="stylesheet" type="text/css" href="fonts/stamp-web/css/stamp-web.css">
 </head>
 <body>
 <div id="app"></div>
