--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src https: 'self' data:; font-src https: 'self' data:;"/>
+    <meta name="description" content="Web based management of stamp collections">
     <title>Stamp Web 7.0.0</title>
     <link href="https://drake-server.ddns.net" rel="preconnect" crossorigin="">
     <link rel="stylesheet" type="text/css" href="fonts/stamp-web/css/stamp-web.css">
