--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://drake-server.ddns.net" rel="preconnect" crossorigin="">
     <link rel="stylesheet" type="text/css" href="fonts/stamp-web/css/stamp-web.css">
 </head>
-<body>
-<div id="app"></div>
+<body class="grid">
+<div id="app" class="grid h-full w-full grid-rows-[auto_1fr] grid-cols-1" ></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
