Provide a card view of stamps
* Provided a richer stamp view with the option to toggle to a stamp card view
* Stamp card view will type and optimize rendering inclusion of the image preview to improve loading performance.
* Still height rendering issues with the stamp card view
* fix typo in stamp model for wantList

Fixes #15

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://drake-server.ddns.net" rel="preconnect" crossorigin="">
     <link rel="stylesheet" type="text/css" href="fonts/stamp-web/css/stamp-web.css">
 </head>
-<body class="grid">
+<body class="grid overflow-y-hidden">
 <div id="app" class="grid h-full w-full grid-rows-[auto_1fr] grid-cols-1" ></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
