Support paging on the stamp view
* Add Paging controls to the stamp view with the ability to fully page the view
* Fix the issue with the stamp card height

Fixes #21
Fixes #14

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="fonts/stamp-web/css/stamp-web.css">
 </head>
 <body class="grid overflow-y-hidden">
-<div id="app" class="grid h-full w-full grid-rows-[auto_1fr] grid-cols-1" ></div>
+<div id="app" class="grid h-full w-full grid-rows-[auto_1fr] grid-cols-1 absolute bottom-0 top-0 right-0 left-0" ></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
